--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
 
-        <h1 class="page-title">Tasinator</h1>
+        <h1 class="page-title">Taskinator</h1>
         <p>Click the button below to add a new task!</p>
         
         <form id="task-form">
